src/objects/Retail_Task__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Account Name)</relationshipLabel>
        <relationshipName>Retail_Tasks5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Detail__c</fullName>
        <label>Action Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Dealer_Code__c</fullName>
        <label>Initial Dealer Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Maturity_Date__c</fullName>
        <label>Actual Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Outstanding_Bal_To_Shinpan_Dealer__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Subrogation&apos;),Actual_Outstanding_Bal_To_Shinpan__c, null)</formula>
        <label>actual outstanding balance(Dealer)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Outstanding_Bal_To_Shinpan__c</fullName>
        <label>actual outstanding balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Outstanding_Balance_To_Shinpan__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Subrogation&apos;),Actual_Outstanding_Balance__c, null)</formula>
        <label>actual outstanding balance(Dealer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Outstanding_Balance__c</fullName>
        <label>actual outstanding balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Payment_Cust_To_Shinpan__c</fullName>
        <label>actual payment amount cust to Shinpan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advise_Date__c</fullName>
        <label>Advise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The flag to identify if this record can be shared with MBJ</description>
        <label>Allow Data Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <label>Lease contract amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Call_Task_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Call Task 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Call_Task_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Call Task 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Call_Task_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Call Task 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income(10K)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationDate__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assist_End_Date__c</fullName>
        <formula>IF((MONTH(EndDate__c)-4) &gt; 0
, DATE(YEAR(EndDate__c), MONTH(EndDate__c)-4, DAY(EndDate__c))
, DATE(YEAR(EndDate__c)-1, MONTH(EndDate__c)+8, DAY(EndDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Assist End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Update_Date__c</fullName>
        <label>Update date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Balloon_RV_Amount__c</fullName>
        <label>Balloon / RV Amount (excluding tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name_Native__c</fullName>
        <label>Account holder name (kana)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <label>Account holder name (kanji)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Common</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_Native__c</fullName>
        <label>Bank Name (Kana)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name (Kanji)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Interest_Rate__c</fullName>
        <label>MBF Base Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount1__c</fullName>
        <label>Bonus Amount 1 (excluding tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount2__c</fullName>
        <label>Bonus Amount 2 (excluding tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Month1__c</fullName>
        <label>Bonus Month 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Month2__c</fullName>
        <label>Bonus Month 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Month__c</fullName>
        <label>Booking Month</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name_Native__c</fullName>
        <label>Branch Name (Kana)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name (Kanji)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <label>Broker Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Contract_Link__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;}&quot;, ContractNumber__c , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS Contract No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <label>Campaign Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Customer_Number__c</fullName>
        <label>Central Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Comments__c</fullName>
        <label>Common Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Comment__c</fullName>
        <label>Compliance Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Change_Date__c</fullName>
        <label>Date of contract condition change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Condition_Change__c</fullName>
        <label>Change of Contract Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Change</fullName>
                </value>
                <value>
                    <fullName>Early Termination</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Vehicle Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <label>ContractNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Cancellation_Date__c</fullName>
        <label>Contract Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Category__c</fullName>
        <label>Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Change of Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Invalid_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Invalid Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Status_Change_Date__c</fullName>
        <label>Contract Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Update_Date__c</fullName>
        <label>Contract Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contractor_Address1_Native__c</fullName>
        <label>Address (kana)-Actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Address1__c</fullName>
        <label>Address (kanji)-Actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Address2_Native__c</fullName>
        <label>Address (kana)-Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Address2__c</fullName>
        <label>Address (kanji)-Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Address3_Native__c</fullName>
        <label>Address (Kana) - Mailing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Address3__c</fullName>
        <label>Address (Kanji) - Mailing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_BirthDate__c</fullName>
        <label>Contractor Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_Company_Established_Date__c</fullName>
        <label>Established Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_Company_Name_Native__c</fullName>
        <label>Contractor Company Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Company_Name__c</fullName>
        <label>Contractor Company Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Fax1__c</fullName>
        <label>Fax Number-Actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Fax2__c</fullName>
        <label>Fax Number-Registration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Fax3__c</fullName>
        <label>Fax - Mailing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Gender__c</fullName>
        <label>Contractor Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_Mail__c</fullName>
        <label>Contractor Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Not Married</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_MobilePhone1__c</fullName>
        <label>Phone2-Actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_MobilePhone2__c</fullName>
        <label>Phone2-Registration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_MobilePhone3__c</fullName>
        <label>Phone2 - Mailing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Name_Native__c</fullName>
        <label>Contractor Name (katakana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Name__c</fullName>
        <label>Contractor Name (kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Phone1__c</fullName>
        <label>Phone1-Actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Phone2__c</fullName>
        <label>Phone1-Registration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Phone3__c</fullName>
        <label>Phone1 - Mailing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_ZipCode1__c</fullName>
        <label>Zip Code-Actual</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_ZipCode2__c</fullName>
        <label>Zip Code-Registration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_ZipCode3__c</fullName>
        <label>Zip Code - Mailing</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Loan_Company_Name__c</fullName>
        <label>Credit Loan Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ORICO</fullName>
                </value>
                <value>
                    <fullName>JACCS</fullName>
                </value>
                <value>
                    <fullName>CEDYNA</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Make__c</fullName>
        <formula>Text(Related_Vehicle__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Model__c</fullName>
        <formula>Text(Related_Vehicle__r.Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <formula>Text(Related_Vehicle__r.ModelYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <label>Dealer Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <label>Dealer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delinquency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delinquency Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Debit Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment (excluding tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Contract Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOC_Call_Task_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC Call Task 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Call_Task_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC Call Task 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Call_Task_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC Call Task 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPI_Cover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FPI Cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPI_Premium_Amount__c</fullName>
        <label>FPI Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Members_Children__c</fullName>
        <label>Family Members(Children)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Members_Others__c</fullName>
        <label>Family Members(Others)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Members_Total__c</fullName>
        <label>Family Members(Total)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Brand__c</fullName>
        <label>Finance Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Product_Name__c</fullName>
        <label>Finance Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Welcome Plan</fullName>
                </value>
                <value>
                    <fullName>Welcome Plan Plus</fullName>
                </value>
                <value>
                    <fullName>Open End Lease</fullName>
                </value>
                <value>
                    <fullName>Open End Lease (Select)</fullName>
                </value>
                <value>
                    <fullName>Open End Lease (Select Plus)</fullName>
                </value>
                <value>
                    <fullName>Close End Lease</fullName>
                </value>
                <value>
                    <fullName>Close End Lease (Mileage Plan Select)</fullName>
                </value>
                <value>
                    <fullName>Close End Lease (Mileage Plan Select Plus)</fullName>
                </value>
                <value>
                    <fullName>Close End Lease (Mileage Plan)</fullName>
                </value>
                <value>
                    <fullName>Re-lease (Open End)</fullName>
                </value>
                <value>
                    <fullName>Re-lease (Close End Mileage Plan)</fullName>
                </value>
                <value>
                    <fullName>Re-lease (Close End)</fullName>
                </value>
                <value>
                    <fullName>Re-loan</fullName>
                </value>
                <value>
                    <fullName>Super Welcome Plan</fullName>
                </value>
                <value>
                    <fullName>Super Welcome Plan Plus</fullName>
                </value>
                <value>
                    <fullName>Start Up Plan</fullName>
                </value>
                <value>
                    <fullName>Normal Loan</fullName>
                </value>
                <value>
                    <fullName>Dual Auto Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Product_Type__c</fullName>
        <label>Finance Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Operating Lease</fullName>
                </value>
                <value>
                    <fullName>Hire Purchase</fullName>
                </value>
                <value>
                    <fullName>Consumer Loan</fullName>
                </value>
                <value>
                    <fullName>Asset Loan</fullName>
                </value>
                <value>
                    <fullName>Finance Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fine_Rate__c</fullName>
        <label>Fine Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Installment_Amount__c</fullName>
        <label>First Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Group__c</fullName>
        <label>Follow Up Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aftersales contacts</fullName>
                </value>
                <value>
                    <fullName>Campaigns only</fullName>
                </value>
                <value>
                    <fullName>Credit Control</fullName>
                </value>
                <value>
                    <fullName>Complaints</fullName>
                </value>
                <value>
                    <fullName>Customer Survey</fullName>
                </value>
                <value>
                    <fullName>Lost sales</fullName>
                </value>
                <value>
                    <fullName>Vehicle sales contacts</fullName>
                </value>
                <value>
                    <fullName>Vehicle sales letters</fullName>
                </value>
                <value>
                    <fullName>General contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Type__c</fullName>
        <label>Follow Up Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted vehicle order VS</fullName>
                </value>
                <value>
                    <fullName>Demo Bokking Approval</fullName>
                </value>
                <value>
                    <fullName>Acquisition/cold call</fullName>
                </value>
                <value>
                    <fullName>Acquisition visit</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Birthday card</fullName>
                </value>
                <value>
                    <fullName>Car anniversary 1</fullName>
                </value>
                <value>
                    <fullName>Car anniversary 2</fullName>
                </value>
                <value>
                    <fullName>Car anniversary 3</fullName>
                </value>
                <value>
                    <fullName>Customer complaint - staff</fullName>
                </value>
                <value>
                    <fullName>Customer complaint - product</fullName>
                </value>
                <value>
                    <fullName>Customer complaint - dealer</fullName>
                </value>
                <value>
                    <fullName>Customer complaint - other</fullName>
                </value>
                <value>
                    <fullName>Confirmed vehicle order</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Invtgn 2</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Invtgn 3</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Invtgn</fullName>
                </value>
                <value>
                    <fullName>Vehicle delivery</fullName>
                </value>
                <value>
                    <fullName>Test drive</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Vehicle enquiry</fullName>
                </value>
                <value>
                    <fullName>Aftersales estimate</fullName>
                </value>
                <value>
                    <fullName>Invoice New Vehicle</fullName>
                </value>
                <value>
                    <fullName>New vehicle lost sale letter</fullName>
                </value>
                <value>
                    <fullName>Incoming letter</fullName>
                </value>
                <value>
                    <fullName>Campaign Letter</fullName>
                </value>
                <value>
                    <fullName>Lost sale - new</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Magazine</fullName>
                </value>
                <value>
                    <fullName>MPC Contact Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Franchise_Description__c</fullName>
        <label>Franchise Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAP_Cover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GAP Cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAP_Premium_Amount__c</fullName>
        <label>GAP Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GFV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GFV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Good_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Good Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aftersales contacts</fullName>
                </value>
                <value>
                    <fullName>Campaigns only</fullName>
                </value>
                <value>
                    <fullName>Credit Control</fullName>
                </value>
                <value>
                    <fullName>Complaints</fullName>
                </value>
                <value>
                    <fullName>Customer Survey</fullName>
                </value>
                <value>
                    <fullName>Lost sales</fullName>
                </value>
                <value>
                    <fullName>Vehicle sales contacts</fullName>
                </value>
                <value>
                    <fullName>Vehicle sales letters</fullName>
                </value>
                <value>
                    <fullName>General contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor1_Address_Native__c</fullName>
        <label>Guarantor1 Address (kana) - actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_Address__c</fullName>
        <label>Guarantor1 Address (Kanji) - actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_BirthDate__c</fullName>
        <label>Guarantor1 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor1_Company_Name_Native__c</fullName>
        <label>Guarantor1 Company Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_Company_Name__c</fullName>
        <label>Guarantor1 Company Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_Fax__c</fullName>
        <label>Guarantor1  Fax - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_Gender__c</fullName>
        <label>Guarantor1 Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor1_MobilePhone__c</fullName>
        <label>Guarantor1  Phone2 - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_Name_Native__c</fullName>
        <label>Guarantor1 Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_Name__c</fullName>
        <label>Guarantor1 Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_Phone__c</fullName>
        <label>Guarantor1  Phone1 - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor1_ZipCode__c</fullName>
        <label>Guarantor1 Zip Code - actual</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>